make commandline args configurable

--- a/spark-operator/kustomization.yaml
+++ b/spark-operator/kustomization.yaml
@@ -6,3 +6,123 @@ namespace: spark-operator
 resources:
   - spark-operator-rbac.yaml
   - spark-operator.yaml
+
+configMapGenerator:
+- name: sparkoperator-config
+  env: sparkoperator-config.properties
+
+vars:
+  - name: operator-namespace
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.operator-namespace
+  - name: ingress-url
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.ingress-url
+  - name: controller-threads
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.controller-threads
+  - name: resync-interval
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.resync-interval
+  - name: enable-batch-scheduler
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.enable-batch-scheduler
+  - name: enable-metrics
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.enable-metrics
+  - name: metrics-labels
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.metrics-labels
+  - name: metrics-port
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.metrics-port
+  - name: metrics-endpoint
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.metrics-endpoint
+  - name: metrics-prefix
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.metrics-prefix
+  - name: enable-webhook
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.enable-webhook
+  - name: webhook-svc-namespace
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.webhook-svc-namespace
+  - name: webhook-port
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.webhook-port
+  - name: webhook-svc-name
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.webhook-svc-name
+  - name: webhook-config-name
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.webhook-config-name
+  - name: leader-election
+    objref:
+      kind: ConfigMap
+      name: sparkoperator-config
+      apiVersion: v1
+    fieldref:
+      fieldpath: data.leader-election
+configurations:
+- sparkoperator-config.yaml
