--- a/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -1889,7 +1889,8 @@ spec:
                       type: string
                     port:
                       format: int32
-                      minimum: 49151
+                      minimum: 1024
+                      maximum: 49151
                       type: integer
                   required:
                   - jmxExporterJar
@@ -2518,56 +2519,6 @@ spec:
           - mainApplicationFile
           - sparkVersion
           - type
-          type: object
-        status:
-          properties:
-            applicationState:
-              properties:
-                errorMessage:
-                  type: string
-                state:
-                  type: string
-              required:
-              - state
-              type: object
-            driverInfo:
-              properties:
-                podName:
-                  type: string
-                webUIAddress:
-                  type: string
-                webUIIngressAddress:
-                  type: string
-                webUIIngressName:
-                  type: string
-                webUIPort:
-                  format: int32
-                  type: integer
-                webUIServiceName:
-                  type: string
-              type: object
-            executionAttempts:
-              format: int32
-              type: integer
-            executorState:
-              additionalProperties:
-                type: string
-              type: object
-            lastSubmissionAttemptTime:
-              format: date-time
-              type: string
-            sparkApplicationId:
-              type: string
-            submissionAttempts:
-              format: int32
-              type: integer
-            submissionID:
-              type: string
-            terminationTime:
-              format: date-time
-              type: string
-          required:
-          - driverInfo
           type: object
       required:
       - metadata
